fix z-index bug on drag

--- a/src/styles/dropdown-menu.css
+++ b/src/styles/dropdown-menu.css
@@ -18,7 +18,7 @@
 	border-radius: var(--radius-md);
 	display: flex;
 	flex-direction: column;
-	z-index: 5;
+	z-index: 20;
 }
 
 .dropdown__list-item {
